---
source: src/codegen/tests/code_gen_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%prg = type { %MyClass, i16 }
%MyClass = type { i16, i16 }

@prg_instance = global %prg zeroinitializer

define void @MyClass(ptr %0) {
entry:
  %x = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 1
  ret void
}

define void @MyClass__testMethod(ptr %0, i16 signext %1) {
entry:
  %x = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 0
  %y = getelementptr inbounds nuw %MyClass, ptr %0, i32 0, i32 1
  %myMethodArg = alloca i16, align [filtered]
  store i16 %1, ptr %myMethodArg, align [filtered]
  %myMethodLocalVar = alloca i16, align [filtered]
  store i16 0, ptr %myMethodLocalVar, align [filtered]
  %load_myMethodArg = load i16, ptr %myMethodArg, align [filtered]
  store i16 %load_myMethodArg, ptr %x, align [filtered]
  %load_x = load i16, ptr %x, align [filtered]
  store i16 %load_x, ptr %y, align [filtered]
  %load_myMethodLocalVar = load i16, ptr %myMethodLocalVar, align [filtered]
  %2 = sext i16 %load_myMethodLocalVar to i32
  %load_y = load i16, ptr %y, align [filtered]
  %3 = sext i16 %load_y to i32
  %tmpVar = icmp eq i32 %2, %3
  ret void
}

define void @prg(ptr %0) {
entry:
  %cl = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 0
  %x = getelementptr inbounds nuw %prg, ptr %0, i32 0, i32 1
  %x1 = getelementptr inbounds nuw %MyClass, ptr %cl, i32 0, i32 0
  %load_x = load i16, ptr %x1, align [filtered]
  store i16 %load_x, ptr %x, align [filtered]
  %load_x2 = load i16, ptr %x, align [filtered]
  call void @MyClass__testMethod(ptr %cl, i16 signext %load_x2)
  %load_x3 = load i16, ptr %x, align [filtered]
  call void @MyClass__testMethod(ptr %cl, i16 signext %load_x3)
  ret void
}
